# llm-tools

./: README.md
.claude-plugin/: marketplace.json
timebox/: README.md
timebox-cli/: pyproject.toml
timebox-cli/src/timebox/: paths.py
timebox-cli/src/timebox/commands/: init_cmd.py  now_cmd.py  plan_cmd.py  review_cmd.py  stats_cmd.py
timebox-cli/src/timebox/parsers/: common.py  config_parser.py  log_parser.py  review_parser.py
timebox-cli/src/timebox/writers/: log_writer.py  plan_writer.py  review_writer.py
timebox-cli/tests/: conftest.py  factories.py  test_calculator.py  test_e2e.py  test_paths.py
timebox-cli/tests/test_commands/: test_log.py  test_stats.py
timebox-cli/tests/test_writers/: test_log_writer.py  test_plan_writer.py  test_review_writer.py
timebox/.claude-plugin/: plugin.json
timebox/cli/: .gitignore  README.md
timebox/cli/src/timebox/: calculator.py  cli.py  models.py  output.py  paths.py  tz.py
timebox/cli/src/timebox/commands/: git_cmd.py  goals_cmd.py  log_cmd.py  now_cmd.py  plan_cmd.py  review_cmd.py  stats_cmd.py  think_cmd.py
timebox/cli/tests/: test_output.py
timebox/cli/tests/test_commands/: conftest.py  test_git.py  test_goals.py  test_init.py  test_now.py  test_plan.py  test_review.py
timebox/cli/tests/test_parsers/: test_common.py  test_config_parser.py  test_log_parser.py  test_plan_parser.py
timebox/commands/: timebox-align.md  timebox-check.md  timebox-end.md  timebox-init.md  timebox-log.md  timebox-loop.md  timebox-next.md  timebox-now.md  timebox-review.md  timebox-setup.md  timebox-think.md  timebox.md
(+6 files in other folders)
