[project]
name = "timebox-cli"
version = "0.1.0"
description = "타임박싱 기반 시간 관리 CLI — LLM 코칭 시스템의 데이터 엔진"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Hyunbin Choi"}]

dependencies = [
    "typer>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "freezegun>=1.4",
    "ruff>=0.9",
]

[project.scripts]
timebox = "timebox.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/timebox"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
